src/PJ/POCO/TEST/NEG/NSTRUC06.POC
/* This tests for struct keyword used where it shouldn't be */
#pragma poco echo "expect>malformed name for struct/union/enum..."

struct struct foobar
	{
	int foo;
	char bar;
	};

main()
{
struct foobar fb;

puts("This shouldn't compile");
}

